syntax = "proto3";
package lotterychainnel.lottery;

import "gogoproto/gogo.proto";
import "lottery/params.proto";
import "lottery/owner.proto";
import "lottery/entrance_fee.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "lottery-chain-nel/x/lottery/types";

// GenesisState defines the lottery module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  Owner owner = 2;
  EntranceFee entranceFee = 3;
  // this line is used by starport scaffolding # genesis/proto/state
}
